--- a/Coffee Machine/Coffee Machine/Machines have needs/task-info.yaml
+++ b/Coffee Machine/Coffee Machine/Machines have needs/task-info.yaml
@@ -88,5 +88,9 @@ files:
         CoffeeMachineTest('machine.coffee_machine').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/68/stages/367/implement
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/68/stages/367/implement">JetBrains
+    Academy</a>
+  time: Thu, 06 Aug 2020 15:59:57 UTC
+record: 2
