--- a/Coffee Machine/Coffee Machine/Enough coffee for everyone/task-info.yaml
+++ b/Coffee Machine/Coffee Machine/Enough coffee for everyone/task-info.yaml
@@ -124,5 +124,9 @@ files:
         CoffeeMachineTest('machine.coffee_machine').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/68/stages/368/implement
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/68/stages/368/implement">JetBrains
+    Academy</a>
+  time: Thu, 06 Aug 2020 16:18:34 UTC
+record: 3
