--- a/Coffee Machine/Coffee Machine/Action!/task-info.yaml
+++ b/Coffee Machine/Coffee Machine/Action!/task-info.yaml
@@ -286,5 +286,5 @@ files:
         CoffeeMachineTest('machine.coffee_machine').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/68/stages/369/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 6
