--- a/Numeric Matrix Processor/Transpose/task-info.yaml
+++ b/Numeric Matrix Processor/Transpose/task-info.yaml
@@ -442,5 +442,5 @@ files:
         CalcTest("processor.processor").run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/96/stages/531/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 3
