--- a/Numeric Matrix Processor/Matrix by matrix multiplication/task-info.yaml
+++ b/Numeric Matrix Processor/Matrix by matrix multiplication/task-info.yaml
@@ -289,5 +289,5 @@ files:
         CalcTest("processor.processor").run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/96/stages/530/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 2
