--- a/Numeric Matrix Processor/Multiplication by number/task-info.yaml
+++ b/Numeric Matrix Processor/Multiplication by number/task-info.yaml
@@ -165,5 +165,5 @@ files:
         CalcTest("processor.processor").run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/96/stages/529/implement
-status: Unchecked
-record: -1
+status: Solved
+record: 1
