--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,13 +1,12 @@
 type: hyperskill
-title: Hangman
+title: Numeric Matrix Processor
 language: English
-summary: Games can help you kill time when you’re bored. But before smartphones, people
-  played games the classic way – with paper and pencil. Let’s recreate one such game
-  and improve your programming skills in the process. In this project, you will code
-  Hangman, a game where the player has to guess a word, letter by letter, in a limited
-  number of attempts. Make a program that plays Hangman with you – and good luck with
-  the guessing!<br/><br/>Learn more at <a href="https://hyperskill.org">https://hyperskill.org/projects/69</a>
+summary: 'Here’s a project for devoted matrix enthusiasts: learn to perform a variety
+  of operations on matrices including addition, multiplication, finding the determinant,
+  and dealing with inverse matrices. If you are working on your tech or math major,
+  this project is a good chance for you to learn matrices in action and not just in
+  your notebook.<br/><br/>Learn more at <a href="https://hyperskill.org">https://hyperskill.org/projects/96</a>'
 programming_language: Python
 content:
-- Hangman
+- Numeric Matrix Processor
 mode: Study
