--- a/Numeric Matrix Processor/Determined!/task-info.yaml
+++ b/Numeric Matrix Processor/Determined!/task-info.yaml
@@ -570,9 +570,17 @@ feedback:
     Exception in test #8
 
     Traceback (most recent call last):
-      File "processor.py", line 105, in <module>
-        op = int(input('\n1. Add matrices\n'
-    ValueError: invalid literal for int() with base 10: '3 3'
+      File "processor.py", line 178, in <module>
+        menu()
+      File "processor.py", line 172, in menu
+        m_det()
+      File "processor.py", line 147, in m_det
+        print('The result is:', det(m), sep=' ')
+      File "processor.py", line 118, in det
+        return (matrix[0][0] * cofactor(matrix, 0, 0)
+      File "processor.py", line 136, in cofactor
+        for i in range(len(m)):
+    TypeError: object of type 'float' has no len()
 
     Please find below the output of your program during this failed test.
     Note that the '>' character indicates the beginning of the input line.
@@ -584,14 +592,13 @@ feedback:
     2. Multiply matrix by a constant
     3. Multiply matrices
     4. Transpose matrix
+    5. Calculate a determinant
     0. Exit
     Your choice: > 5
-
-    1. Add matrices
-    2. Multiply matrix by a constant
-    3. Multiply matrices
-    4. Transpose matrix
-    0. Exit
-    Your choice: > 3 3
-  time: Wed, 12 Aug 2020 22:25:08 UTC
+    Enter size of matrix: > 3 3
+    Enter matrix:
+    > 1 2 3
+    > 4 5 7
+    > 10 22 23
+  time: Wed, 12 Aug 2020 23:44:03 UTC
 record: -1
