--- a/Numeric Matrix Processor/Inverse matrix/task-info.yaml
+++ b/Numeric Matrix Processor/Inverse matrix/task-info.yaml
@@ -623,5 +623,9 @@ files:
         CalcTest("processor.processor").run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/96/stages/533/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/96/stages/533/implement">JetBrains
+    Academy</a>
+  time: Thu, 13 Aug 2020 23:08:09 UTC
 record: -1
