rock_paper_scissors

--- a/Rock-Paper-Scissors/Endless game/task-info.yaml
+++ b/Rock-Paper-Scissors/Endless game/task-info.yaml
@@ -1,11 +1,6 @@
 type: edu
 custom_name: stage3
 files:
-- name: rps/game.py
-  visible: true
-  text: |
-    # Write your code here
-  learner_created: false
 - name: tests.py
   visible: false
   text: |
@@ -104,6 +99,28 @@ files:
     if __name__ == '__main__':
         RPSTest("rps.game").run_tests()
   learner_created: false
+- name: rps/game.py
+  visible: true
+  text: |
+    import random
+
+    player_move = input()
+    winning_moves = {'rock': 'paper', 'paper': 'scissors', 'scissors': 'rock'}
+    computer_move = random.choice(list(winning_moves.keys()))
+    print(computer_move)
+    if player_move == winning_moves[computer_move]:
+        print('Well done. The computer chose {} and failed'.format(computer_move))
+    elif player_move == computer_move:
+        print('There is a draw {}'.format(computer_move))
+    elif computer_move == winning_moves[player_move]:
+        print('Sorry, but the computer chose {}'.format(computer_move))
+    else:
+        print('Something gone wrong')
+  learner_created: false
 feedback_link: https://hyperskill.org/projects/78/stages/433/implement
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/78/stages/433/implement">JetBrains
+    Academy</a>
+  time: Fri, 14 Aug 2020 22:44:05 UTC
+record: 2
