--- a/Rock-Paper-Scissors/More options/task-info.yaml
+++ b/Rock-Paper-Scissors/More options/task-info.yaml
@@ -4,7 +4,20 @@ files:
 - name: rps/game.py
   visible: true
   text: |
-    # Write your code here
+    import random
+
+    player_move = input()
+    winning_moves = {'rock': 'paper', 'paper': 'scissors', 'scissors': 'rock'}
+    computer_move = random.choice(list(winning_moves.keys()))
+
+    if player_move == winning_moves[computer_move]:
+        print('Well done. The computer chose {} and failed'.format(computer_move))
+    elif computer_move == winning_moves[player_move]:
+        print('Sorry, but the computer chose {}'.format(computer_move))
+    elif player_move == computer_move:
+        print('There is a draw {}'.format(computer_move))
+    else:
+        print('Something gone wrong')
   learner_created: false
 - name: tests.py
   visible: false
