--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -1,21 +1,19 @@
 hyperskill_project:
-  id: 96
-  ide_files: https://stepik.org/media/attachments/lesson/308175/additional_files.json
+  id: 78
+  ide_files: https://stepik.org/media/attachments/lesson/255033/additional_files.json
   is_template_based: false
   use_ide: true
 stages:
-- id: 528
-  step: 8748
-- id: 529
-  step: 8749
-- id: 530
-  step: 8750
-- id: 531
-  step: 8751
-- id: 532
-  step: 8752
-- id: 533
-  step: 8753
+- id: 431
+  step: 7205
+- id: 432
+  step: 7206
+- id: 433
+  step: 7207
+- id: 434
+  step: 7208
+- id: 435
+  step: 7209
 topics:
   0:
   - title: Introduction to Python
@@ -38,10 +36,6 @@ topics:
     theory_id: 6025
   - title: Naming variables
     theory_id: 5885
-  - title: List
-    theory_id: 5979
-  - title: Indexes
-    theory_id: 6189
   - title: Taking input
     theory_id: 5913
   - title: Program with numbers
@@ -54,89 +48,61 @@ topics:
     theory_id: 5932
   - title: Elif statement
     theory_id: 5926
-  - title: For loop
-    theory_id: 6065
-  - title: List comprehension
-    theory_id: 6315
-  - title: Nested lists
-    theory_id: 6938
-  - title: Introduction to matrices
-    theory_id: 7112
-  - title: Types of matrices
-    theory_id: 7285
-  - title: Operations with matrices
-    theory_id: 7296
-  2:
-  - title: Immutability
-    theory_id: 7929
-  - title: Computer programming
-    theory_id: 8739
-  - title: Intro to computational thinking
-    theory_id: 8742
-  - title: Components of computational thinking
-    theory_id: 8745
+  1:
   - title: IDE
     theory_id: 3805
-  - title: Tuple
-    theory_id: 7462
+  - title: Quotes and multi-line strings
+    theory_id: 5814
+  - title: List
+    theory_id: 5979
+  - title: Dictionary
+    theory_id: 6481
   - title: Invoking a function
     theory_id: 5891
+  - title: String formatting
+    theory_id: 6037
+  - title: Load module
+    theory_id: 6019
+  - title: Random module
+    theory_id: 6263
+  - title: PyCharm basics
+    theory_id: 6193
+  2:
+  - title: Avoiding bad comments
+    theory_id: 6440
+  - title: While loop
+    theory_id: 5940
+  - title: For loop
+    theory_id: 6065
+  - title: Loop control statements
+    theory_id: 6302
+  3:
+  - title: Files
+    theory_id: 6989
   - title: Declaring a function
     theory_id: 5900
   - title: Arguments
     theory_id: 7248
-  - title: Operations with list
-    theory_id: 6031
-  - title: Identity testing
-    theory_id: 8077
-  - title: Functional decomposition
-    theory_id: 9571
-  - title: Objects in Python
-    theory_id: 9262
-  - title: Default arguments
-    theory_id: 10295
-  - title: Args
-    theory_id: 8560
-  - title: Matrix Multiplication
-    theory_id: 7372
-  - title: PyCharm basics
-    theory_id: 6193
-  3:
-  - title: Introduction to OOP
-    theory_id: 3614
-  - title: Quotes and multi-line strings
-    theory_id: 5814
-  - title: Scopes
-    theory_id: 6322
-  - title: String formatting
-    theory_id: 6037
-  - title: Class
-    theory_id: 6661
-  - title: Class instances
-    theory_id: 6669
-  - title: Methods
-    theory_id: 6931
-  - title: Methods and attributes
-    theory_id: 6981
+  - title: Sep and end arguments of print
+    theory_id: 7452
+  - title: Files in Python
+    theory_id: 8691
+  - title: Reading files
+    theory_id: 8139
+  - title: Writing files
+    theory_id: 8334
+  - title: Flush and file arguments of print
+    theory_id: 8006
   4:
-  - title: Computer algorithms
-    theory_id: 4953
-  - title: Recursion basics
-    theory_id: 5984
+  - title: Escape sequences
+    theory_id: 7130
+  - title: Indexes
+    theory_id: 6189
   - title: Slicing
     theory_id: 6177
-  - title: While loop
-    theory_id: 5940
-  - title: Algorithms in Python
-    theory_id: 7316
-  - title: Recursion in Python
-    theory_id: 7665
-  - title: A determinant of a matrix
-    theory_id: 9184
-  5:
+  - title: Operations with list
+    theory_id: 6031
   - title: Basic string methods
     theory_id: 6842
-  - title: Load module
-    theory_id: 6019
-  - title: Math functions
-    theory_id: 6256
+  - title: Split and join
+    theory_id: 6972
