--- a/Rock-Paper-Scissors/More options/task-info.yaml
+++ b/Rock-Paper-Scissors/More options/task-info.yaml
@@ -233,6 +233,16 @@ files:
     if __name__ == '__main__':
         RPSTest("rps.game").run_tests()
   learner_created: false
+- name: rps/rating.txt
+  visible: true
+  learner_created: true
+- name: rating.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/78/stages/435/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/78/stages/435/implement">JetBrains
+    Academy</a>
+  time: Sat, 15 Aug 2020 15:28:08 UTC
 record: -1
