--- a/Simple Banking System/Luhn algorithm/task-info.yaml
+++ b/Simple Banking System/Luhn algorithm/task-info.yaml
@@ -189,5 +189,9 @@ files:
         BankingSystem('banking.banking').run_tests()
   learner_created: false
 feedback_link: https://hyperskill.org/projects/109/stages/592/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/109/stages/592/implement">JetBrains
+    Academy</a>
+  time: Sat, 15 Aug 2020 21:49:15 UTC
 record: -1
