--- a/Simple Banking System/Luhn algorithm/task-info.yaml
+++ b/Simple Banking System/Luhn algorithm/task-info.yaml
@@ -3,7 +3,58 @@ files:
 - name: banking/banking.py
   visible: true
   text: |
-    # Write your code here
+    import random
+
+
+    def create_account():
+        bank_id = '400000'
+        acc_id = ''
+        for i in range(9):
+            acc_id += str(random.randint(0, 9))
+        checksum = str(10 - sum([(int(n) * (int(n) % 2 + 1)) % 9 for n in (bank_id + acc_id)]) % 10)
+        card_number = bank_id + acc_id + checksum
+        pin = ''
+        for _ in range(4):
+            pin += str(random.randint(1, 9))
+        if card_number not in cards:
+            cards[card_number] = pin
+            balance[card_number] = 0
+            print('\nYour card has been created\n'
+                  'Your card number:\n' + card_number + '\n'
+                  'Your card PIN:\n' + pin + '\n')
+        else:
+            print('Card already exist\n')
+
+
+    def login():
+        user_card = input('\nEnter your card number:\n')
+        user_pin = input('Enter your PIN:\n')
+        if user_card in cards and user_pin == cards[user_card]:
+            print('\nYou have successfully logged in!\n')
+            return {'state': 'logged', 'id': user_card}
+        print('\nWrong card number or PIN!\n')
+        return {'state': 'main', 'id': 0}
+
+
+    cards = {}
+    balance = {}
+    cmd = ''
+    current = {'state': 'main', 'id': 0}
+    menu = {'main': '1. Create an account\n2. Log into account\n0. Exit\n',
+            'logged': '1. Balance\n2. Log out\n0. Exit\n'}
+    while cmd != '0':
+        cmd = input(menu[current['state']])
+        if current['state'] == 'main':
+            if cmd == '1':
+                create_account()
+            elif cmd == '2':
+                current = login()
+        elif current['state'] == 'logged':
+            if cmd == '1':
+                print('\nBalance:', balance[current['id']], '\n')
+            elif cmd == '2':
+                print('\nYou have successfully logged out!\n')
+                current['state'] = 'main'
   learner_created: false
 - name: tests.py
   visible: false
@@ -190,8 +241,4 @@ files:
   learner_created: false
 feedback_link: https://hyperskill.org/projects/109/stages/592/implement
 status: Solved
-feedback:
-  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/109/stages/592/implement">JetBrains
-    Academy</a>
-  time: Sat, 15 Aug 2020 22:09:10 UTC
-record: -1
+record: 1
