--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -1,21 +1,21 @@
 hyperskill_project:
-  id: 78
-  ide_files: https://stepik.org/media/attachments/lesson/255033/additional_files.json
+  id: 109
+  ide_files: https://stepik.org/media/attachments/lesson/361994/additional_files.json
   is_template_based: false
   use_ide: true
 stages:
-- id: 431
-  step: 7205
-- id: 432
-  step: 7206
-- id: 433
-  step: 7207
-- id: 434
-  step: 7208
-- id: 435
-  step: 7209
+- id: 591
+  step: 9827
+- id: 592
+  step: 9828
+- id: 593
+  step: 9829
+- id: 594
+  step: 9830
 topics:
   0:
+  - title: Introduction to OOP
+    theory_id: 3614
   - title: Introduction to Python
     theory_id: 5204
   - title: Overview of the basic program
@@ -28,81 +28,85 @@ topics:
     theory_id: 6081
   - title: Basic data types
     theory_id: 5852
+  - title: Quotes and multi-line strings
+    theory_id: 5814
   - title: Variables
     theory_id: 5859
   - title: Integer arithmetic
     theory_id: 5865
   - title: Boolean logic
     theory_id: 6025
+  - title: Type casting
+    theory_id: 6224
   - title: Naming variables
     theory_id: 5885
-  - title: Taking input
-    theory_id: 5913
-  - title: Program with numbers
-    theory_id: 5872
-  - title: Comparisons
-    theory_id: 5920
-  - title: If statement
-    theory_id: 5953
-  - title: Else statement
-    theory_id: 5932
-  - title: Elif statement
-    theory_id: 5926
-  1:
-  - title: IDE
-    theory_id: 3805
-  - title: Quotes and multi-line strings
-    theory_id: 5814
   - title: List
     theory_id: 5979
   - title: Dictionary
     theory_id: 6481
   - title: Invoking a function
     theory_id: 5891
+  - title: Declaring a function
+    theory_id: 5900
+  - title: Scopes
+    theory_id: 6322
+  - title: Taking input
+    theory_id: 5913
+  - title: Program with numbers
+    theory_id: 5872
+  - title: Comparisons
+    theory_id: 5920
   - title: String formatting
     theory_id: 6037
-  - title: Load module
-    theory_id: 6019
-  - title: Random module
-    theory_id: 6263
-  - title: PyCharm basics
-    theory_id: 6193
-  2:
-  - title: Avoiding bad comments
-    theory_id: 6440
+  - title: If statement
+    theory_id: 5953
+  - title: Else statement
+    theory_id: 5932
+  - title: Elif statement
+    theory_id: 5926
   - title: While loop
     theory_id: 5940
   - title: For loop
     theory_id: 6065
   - title: Loop control statements
     theory_id: 6302
-  3:
+  - title: Load module
+    theory_id: 6019
+  - title: Random module
+    theory_id: 6263
+  - title: Class
+    theory_id: 6661
+  - title: Class instances
+    theory_id: 6669
+  - title: Methods
+    theory_id: 6931
+  - title: Methods and attributes
+    theory_id: 6981
+  2:
   - title: Files
     theory_id: 6989
-  - title: Declaring a function
-    theory_id: 5900
-  - title: Arguments
-    theory_id: 7248
-  - title: Sep and end arguments of print
-    theory_id: 7452
-  - title: Files in Python
-    theory_id: 8691
-  - title: Reading files
-    theory_id: 8139
-  - title: Writing files
-    theory_id: 8334
-  - title: Flush and file arguments of print
-    theory_id: 8006
-  4:
-  - title: Escape sequences
-    theory_id: 7130
-  - title: Indexes
-    theory_id: 6189
-  - title: Slicing
-    theory_id: 6177
-  - title: Operations with list
-    theory_id: 6031
-  - title: Basic string methods
-    theory_id: 6842
-  - title: Split and join
-    theory_id: 6972
+  - title: Introduction to databases
+    theory_id: 8497
+  - title: What is SQL
+    theory_id: 7054
+  - title: Basic data types
+    theory_id: 7123
+  - title: Literals
+    theory_id: 7400
+  - title: Expressions
+    theory_id: 7409
+  - title: Basic SELECT statement
+    theory_id: 7392
+  - title: The NULL value
+    theory_id: 7907
+  - title: SELECT FROM statement
+    theory_id: 8611
+  - title: SELECT FROM WHERE statement
+    theory_id: 8619
+  - title: Basic INSERT statement
+    theory_id: 9059
+  - title: Basic CREATE statement
+    theory_id: 9084
+  3:
+  - title: Basic DELETE statement
+    theory_id: 9075
