--- a/Simple Banking System/Advanced system/task-info.yaml
+++ b/Simple Banking System/Advanced system/task-info.yaml
@@ -480,10 +480,13 @@ files:
 - name: banking/card.s3db
   visible: true
   learner_created: true
+- name: card.s3db-journal
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/109/stages/594/implement
 status: Solved
 feedback:
   message: Congratulations! Continue on <a href="https://hyperskill.org/projects/109/stages/594/implement">JetBrains
     Academy</a>
-  time: Tue, 18 Aug 2020 20:14:48 UTC
+  time: Tue, 18 Aug 2020 21:14:06 UTC
 record: -1
