--- a/Text-Based Browser/Hotkeys/task-info.yaml
+++ b/Text-Based Browser/Hotkeys/task-info.yaml
@@ -170,6 +170,22 @@ files:
 
     TextBasedBrowserTest('browser.browser').run_tests()
   learner_created: false
+- name: browser/bloomberg
+  visible: true
+  learner_created: true
+- name: browser/nytimes
+  visible: true
+  learner_created: true
+- name: tb_tabs/nytimes
+  visible: true
+  learner_created: true
+- name: tb_tabs/bloomberg
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/79/stages/438/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/79/stages/438/implement">JetBrains
+    Academy</a>
+  time: Wed, 19 Aug 2020 14:39:14 UTC
 record: -1
