--- a/Text-Based Browser/Hotkeys/task-info.yaml
+++ b/Text-Based Browser/Hotkeys/task-info.yaml
@@ -3,22 +3,39 @@ custom_name: stage3
 files:
 - name: browser/browser.py
   visible: true
-  text: "\nnytimes_com = '''\nThis New Liquid Is Magnetic, and Mesmerizing\n\nScientists\
-    \ have created “soft” magnets that can flow \nand change shape, and that could\
-    \ be a boon to medicine \nand robotics. (Source: New York Times)\n\n\nMost Wikipedia\
-    \ Profiles Are of Men. This Scientist Is Changing That.\n\nJessica Wade has added\
-    \ nearly 700 Wikipedia biographies for\n important female and minority scientists\
-    \ in less than two \n years.\n\n'''\n\nbloomberg_com = '''\nThe Space Race: From\
-    \ Apollo 11 to Elon Musk\n\nIt's 50 years since the world was gripped by historic\
-    \ images\n of Apollo 11, and Neil Armstrong -- the first man to walk \n on the\
-    \ moon. It was the height of the Cold War, and the charts\n were filled with David\
-    \ Bowie's Space Oddity, and Creedence's \n Bad Moon Rising. The world is a very\
-    \ different place than \n it was 5 decades ago. But how has the space race changed\
-    \ since\n the summer of '69? (Source: Bloomberg)\n\n\nTwitter CEO Jack Dorsey\
-    \ Gives Talk at Apple Headquarters\n\nTwitter and Square Chief Executive Officer\
-    \ Jack Dorsey \n addressed Apple Inc. employees at the iPhone maker’s headquarters\n\
-    \ Tuesday, a signal of the strong ties between the Silicon Valley giants.\n'''\n\
-    \n# write your code here\n"
+  text: "import os\nimport sys\n\nnytimes_com = '''\nThis New Liquid Is Magnetic,\
+    \ and Mesmerizing\n\nScientists have created “soft” magnets that can flow \nand\
+    \ change shape, and that could be a boon to medicine \nand robotics. (Source:\
+    \ New York Times)\n\n\nMost Wikipedia Profiles Are of Men. This Scientist Is Changing\
+    \ That.\n\nJessica Wade has added nearly 700 Wikipedia biographies for\n important\
+    \ female and minority scientists in less than two \n years.\n\n'''\n\nbloomberg_com\
+    \ = '''\nThe Space Race: From Apollo 11 to Elon Musk\n\nIt's 50 years since the\
+    \ world was gripped by historic images\n of Apollo 11, and Neil Armstrong -- the\
+    \ first man to walk \n on the moon. It was the height of the Cold War, and the\
+    \ charts\n were filled with David Bowie's Space Oddity, and Creedence's \n Bad\
+    \ Moon Rising. The world is a very different place than \n it was 5 decades ago.\
+    \ But how has the space race changed since\n the summer of '69? (Source: Bloomberg)\n\
+    \n\nTwitter CEO Jack Dorsey Gives Talk at Apple Headquarters\n\nTwitter and Square\
+    \ Chief Executive Officer Jack Dorsey \n addressed Apple Inc. employees at the\
+    \ iPhone maker’s headquarters\n Tuesday, a signal of the strong ties between the\
+    \ Silicon Valley giants.\n'''\n\n\ndef save_to_dir(directory, file_name, text):\n\
+    \    try:\n        file = open(directory + '\\\\' + file_name, 'w')\n        file.write(text)\n\
+    \        file.close()\n        return None\n    except FileNotFoundError:\n  \
+    \      return None\n\n\ndef check_for_cache(directory, file_name):\n    try:\n\
+    \        file = open(directory + '\\\\' + file_name, 'r')\n        cache = file.read()\n\
+    \        file.close()\n        return cache\n    except FileNotFoundError:\n \
+    \       return None\n\n\ndef valid_url(url):\n    if '.' in url:\n        return\
+    \ True\n    return False\n\n\ndef short_url(url):\n    return url.split('.')[0]\n\
+    \n\ndir_name = sys.argv[1]\n\nif dir_name:\n    try:\n        os.mkdir(dir_name)\n\
+    \    except FileExistsError:\n        pass\n\nurl = input()\nwhile url != 'exit':\n\
+    \    if valid_url(url):\n        if url == 'bloomberg.com':\n            print(bloomberg_com)\n\
+    \            if dir_name:\n                save_to_dir(dir_name, url.split('.')[0],\
+    \ bloomberg_com)\n        elif url == 'nytimes.com':\n            print(nytimes_com)\n\
+    \            if dir_name:\n                save_to_dir(dir_name, url.split('.')[0],\
+    \ nytimes_com)\n        else:\n            print('error, wrong url')\n    else:\n\
+    \        cache = check_for_cache(dir_name, url.split('.')[0])\n        if cache:\n\
+    \            print(cache)\n        else:\n            print('error wrong url without\
+    \ dot')\n    url = input()\n"
   learner_created: false
 - name: tests.py
   visible: false
@@ -170,12 +187,6 @@ files:
 
     TextBasedBrowserTest('browser.browser').run_tests()
   learner_created: false
-- name: browser/bloomberg
-  visible: true
-  learner_created: true
-- name: browser/nytimes
-  visible: true
-  learner_created: true
 - name: tb_tabs/nytimes
   visible: true
   learner_created: true
@@ -184,8 +195,4 @@ files:
   learner_created: true
 feedback_link: https://hyperskill.org/projects/79/stages/438/implement
 status: Solved
-feedback:
-  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/79/stages/438/implement">JetBrains
-    Academy</a>
-  time: Wed, 19 Aug 2020 14:39:14 UTC
-record: -1
+record: 2
