--- a/Text-Based Browser/Parsing/task-info.yaml
+++ b/Text-Based Browser/Parsing/task-info.yaml
@@ -3,22 +3,54 @@ custom_name: stage5
 files:
 - name: browser/browser.py
   visible: true
-  text: "\nnytimes_com = '''\nThis New Liquid Is Magnetic, and Mesmerizing\n\nScientists\
-    \ have created “soft” magnets that can flow \nand change shape, and that could\
-    \ be a boon to medicine \nand robotics. (Source: New York Times)\n\n\nMost Wikipedia\
-    \ Profiles Are of Men. This Scientist Is Changing That.\n\nJessica Wade has added\
-    \ nearly 700 Wikipedia biographies for\n important female and minority scientists\
-    \ in less than two \n years.\n\n'''\n\nbloomberg_com = '''\nThe Space Race: From\
-    \ Apollo 11 to Elon Musk\n\nIt's 50 years since the world was gripped by historic\
-    \ images\n of Apollo 11, and Neil Armstrong -- the first man to walk \n on the\
-    \ moon. It was the height of the Cold War, and the charts\n were filled with David\
-    \ Bowie's Space Oddity, and Creedence's \n Bad Moon Rising. The world is a very\
-    \ different place than \n it was 5 decades ago. But how has the space race changed\
-    \ since\n the summer of '69? (Source: Bloomberg)\n\n\nTwitter CEO Jack Dorsey\
-    \ Gives Talk at Apple Headquarters\n\nTwitter and Square Chief Executive Officer\
-    \ Jack Dorsey \n addressed Apple Inc. employees at the iPhone maker’s headquarters\n\
-    \ Tuesday, a signal of the strong ties between the Silicon Valley giants.\n'''\n\
-    \n# write your code here\n"
+  text: "import os\nimport sys\n\nnytimes_com = '''\nThis New Liquid Is Magnetic,\
+    \ and Mesmerizing\n\nScientists have created “soft” magnets that can flow \nand\
+    \ change shape, and that could be a boon to medicine \nand robotics. (Source:\
+    \ New York Times)\n\n\nMost Wikipedia Profiles Are of Men. This Scientist Is Changing\
+    \ That.\n\nJessica Wade has added nearly 700 Wikipedia biographies for\n important\
+    \ female and minority scientists in less than two \n years.\n\n'''\n\nbloomberg_com\
+    \ = '''\nThe Space Race: From Apollo 11 to Elon Musk\n\nIt's 50 years since the\
+    \ world was gripped by historic images\n of Apollo 11, and Neil Armstrong -- the\
+    \ first man to walk \n on the moon. It was the height of the Cold War, and the\
+    \ charts\n were filled with David Bowie's Space Oddity, and Creedence's \n Bad\
+    \ Moon Rising. The world is a very different place than \n it was 5 decades ago.\
+    \ But how has the space race changed since\n the summer of '69? (Source: Bloomberg)\n\
+    \n\nTwitter CEO Jack Dorsey Gives Talk at Apple Headquarters\n\nTwitter and Square\
+    \ Chief Executive Officer Jack Dorsey \n addressed Apple Inc. employees at the\
+    \ iPhone maker’s headquarters\n Tuesday, a signal of the strong ties between the\
+    \ Silicon Valley giants.\n'''\n\n\nclass Browser:\n    def __init__(self):\n \
+    \       self.dir = self.make_dir()\n        self.history = []\n\n    def make_dir(self):\n\
+    \        if len(sys.argv) > 1:\n            dir_name = sys.argv[1] + '\\\\'\n\
+    \            try:\n                os.mkdir(dir_name)\n            except FileExistsError:\n\
+    \                pass\n        else:\n            dir_name = ''\n        return\
+    \ dir_name\n\n    def save_to_dir(self, file_name, text=''):\n        try:\n \
+    \           file = open(self.dir + file_name, 'w')\n            file.write(text)\n\
+    \            file.close()\n            return None\n        except FileNotFoundError:\n\
+    \            return None\n\n    def check_for_cache(self, file_name):\n      \
+    \  try:\n            file = open(self.dir + file_name, 'r')\n            cache\
+    \ = file.read()\n            file.close()\n            return cache\n        except\
+    \ FileNotFoundError:\n            return None\n\n    def valid_url(self, url):\n\
+    \        if '.' in url:\n            return True\n        return False\n\n   \
+    \ def short_url(self, url):\n        return url.split('.')[0]\n\n    def show(self,\
+    \ url):\n        if self.valid_url(url):\n            if url == 'bloomberg.com':\n\
+    \                self.save_to_dir(self.short_url(url), bloomberg_com)\n      \
+    \          self.history.append(self.short_url(url))\n                return bloomberg_com\n\
+    \            elif url == 'nytimes.com':\n                self.save_to_dir(self.short_url(url),\
+    \ nytimes_com)\n                self.history.append(self.short_url(url))\n   \
+    \             return nytimes_com\n            else:\n                return 'error,\
+    \ wrong url'\n        else:\n            if url == 'exit':\n                exit()\n\
+    \            elif url == 'back':\n                if self.history:\n         \
+    \           self.history.pop()\n                    return self.show(self.history.pop())\n\
+    \                return None\n            cache = self.check_for_cache(self.short_url(url))\n\
+    \            if cache:\n                return cache\n            else:\n    \
+    \            return 'error, wrong url without dot'\n\n\nsafari = Browser()\nwhile\
+    \ True:\n    print(safari.show(input()))\n"
+  learner_created: false
+- name: tb_tabs/nytimes
+  visible: true
+  learner_created: false
+- name: tb_tabs/bloomberg
+  visible: true
   learner_created: false
 - name: tests.py
   visible: false
