--- a/course-info.yaml
+++ b/course-info.yaml
@@ -1,12 +1,14 @@
 type: hyperskill
-title: Simple Banking System
+title: Text-Based Browser
 language: English
-summary: Everything goes digital these days, and so does money. Today, most people
-  have credit cards, which save us time, energy and nerves. From not having to carry
-  a wallet full of cash to consumer protection, cards make our lives easier in many
-  ways. In this project, you will develop a simple banking system with database.<br/><br/>Learn
-  more at <a href="https://hyperskill.org">https://hyperskill.org/projects/109</a>
+summary: Sometimes you need to read online documentation or find something on the
+  Internet from the command line or terminal. So, let's use Python to create a text-based
+  browser! Of course, making a real, full-blown browser is a very difficult task.
+  In this project, you'll create a very simple browser that will ignore JavaScript
+  and CSS, won't have cookies, and will only process a limited set of tags. Still,
+  it will be useful and, most importantly, fun to program!<br/><br/>Learn more at
+  <a href="https://hyperskill.org">https://hyperskill.org/projects/79</a>
 programming_language: Python
 content:
-- Simple Banking System
+- Text-Based Browser
 mode: Study
