--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -1,21 +1,23 @@
 hyperskill_project:
-  id: 109
-  ide_files: https://stepik.org/media/attachments/lesson/361994/additional_files.json
+  id: 79
+  ide_files: https://stepik.org/media/attachments/lesson/255229/additional_files.json
   is_template_based: false
   use_ide: true
 stages:
-- id: 591
-  step: 9827
-- id: 592
-  step: 9828
-- id: 593
-  step: 9829
-- id: 594
-  step: 9830
+- id: 436
+  step: 7210
+- id: 437
+  step: 7211
+- id: 438
+  step: 7212
+- id: 439
+  step: 7213
+- id: 440
+  step: 7214
+- id: 441
+  step: 7215
 topics:
   0:
-  - title: Introduction to OOP
-    theory_id: 3614
   - title: Introduction to Python
     theory_id: 5204
   - title: Overview of the basic program
@@ -28,85 +30,131 @@ topics:
     theory_id: 6081
   - title: Basic data types
     theory_id: 5852
-  - title: Quotes and multi-line strings
-    theory_id: 5814
   - title: Variables
     theory_id: 5859
   - title: Integer arithmetic
     theory_id: 5865
   - title: Boolean logic
     theory_id: 6025
-  - title: Type casting
-    theory_id: 6224
   - title: Naming variables
     theory_id: 5885
   - title: List
     theory_id: 5979
-  - title: Dictionary
-    theory_id: 6481
-  - title: Invoking a function
-    theory_id: 5891
-  - title: Declaring a function
-    theory_id: 5900
-  - title: Scopes
-    theory_id: 6322
   - title: Taking input
     theory_id: 5913
   - title: Program with numbers
     theory_id: 5872
   - title: Comparisons
     theory_id: 5920
-  - title: String formatting
-    theory_id: 6037
   - title: If statement
     theory_id: 5953
+  - title: For loop
+    theory_id: 6065
+  1:
+  - title: Files
+    theory_id: 6989
+  - title: IDE
+    theory_id: 3805
+  - title: Quotes and multi-line strings
+    theory_id: 5814
+  - title: Type casting
+    theory_id: 6224
+  - title: Escape sequences
+    theory_id: 7130
+  - title: Indexes
+    theory_id: 6189
+  - title: Invoking a function
+    theory_id: 5891
+  - title: Declaring a function
+    theory_id: 5900
+  - title: Arguments
+    theory_id: 7248
+  - title: Operations with list
+    theory_id: 6031
+  - title: String formatting
+    theory_id: 6037
+  - title: Basic string methods
+    theory_id: 6842
+  - title: Split and join
+    theory_id: 6972
+  - title: Load module
+    theory_id: 6019
+  - title: Files in Python
+    theory_id: 8691
+  - title: Reading files
+    theory_id: 8139
+  - title: Writing files
+    theory_id: 8334
+  - title: Context manager
+    theory_id: 8702
+  - title: Introduction to operating systems
+    theory_id: 9704
+  - title: Command line overview
+    theory_id: 8977
+  - title: Parameters and options
+    theory_id: 9746
+  - title: Command line arguments
+    theory_id: 7981
+  - title: PyCharm basics
+    theory_id: 6193
+  2:
+  - title: Computer algorithms
+    theory_id: 4953
+  - title: Introducing the first algorithm
+    theory_id: 10336
+  - title: The big O notation
+    theory_id: 4991
+  - title: Data structures
+    theory_id: 5161
+  - title: Stack
+    theory_id: 5252
+  - title: Computer programming
+    theory_id: 8739
+  - title: Intro to computational thinking
+    theory_id: 8742
+  - title: Components of computational thinking
+    theory_id: 8745
   - title: Else statement
     theory_id: 5932
   - title: Elif statement
     theory_id: 5926
-  - title: While loop
-    theory_id: 5940
-  - title: For loop
-    theory_id: 6065
-  - title: Loop control statements
-    theory_id: 6302
-  - title: Load module
-    theory_id: 6019
-  - title: Random module
-    theory_id: 6263
-  - title: Class
-    theory_id: 6661
-  - title: Class instances
-    theory_id: 6669
-  - title: Methods
-    theory_id: 6931
-  - title: Methods and attributes
-    theory_id: 6981
-  2:
-  - title: Files
-    theory_id: 6989
-  - title: Introduction to databases
-    theory_id: 8497
-  - title: What is SQL
-    theory_id: 7054
-  - title: Basic data types
-    theory_id: 7123
-  - title: Literals
-    theory_id: 7400
-  - title: Expressions
-    theory_id: 7409
-  - title: Basic SELECT statement
-    theory_id: 7392
-  - title: The NULL value
-    theory_id: 7907
-  - title: SELECT FROM statement
-    theory_id: 8611
-  - title: SELECT FROM WHERE statement
-    theory_id: 8619
-  - title: Basic INSERT statement
-    theory_id: 9059
-  - title: Basic CREATE statement
-    theory_id: 9084
+  - title: Functional decomposition
+    theory_id: 9571
+  - title: List comprehension
+    theory_id: 6315
+  - title: Algorithms in Python
+    theory_id: 7316
+  - title: Stack in Python
+    theory_id: 8915
   3:
-  - title: Basic DELETE statement
-    theory_id: 9075
+  - title: World Wide Web
+    theory_id: 6633
+  - title: HyperText Transfer Protocol
+    theory_id: 6569
+  - title: HTTP URL
+    theory_id: 6740
+  - title: HTTP messages
+    theory_id: 6752
+  - title: Dictionary
+    theory_id: 6481
+  - title: Create module
+    theory_id: 6057
+  - title: Packages
+    theory_id: 6384
+  - title: Pip
+    theory_id: 6230
+  - title: 'Requests: retrieving data'
+    theory_id: 8603
+  - title: HTML basics
+    theory_id: 6434
+  - title: Tags and attributes
+    theory_id: 7536
+  - title: HTML page structure
+    theory_id: 6491
+  4:
+  - title: XML
+    theory_id: 6901
+  - title: 'Requests: manipulating data'
+    theory_id: 8681
+  - title: BeautifulSoup
+    theory_id: 10209
