--- a/Text-Based Browser/Parsing/task-info.yaml
+++ b/Text-Based Browser/Parsing/task-info.yaml
@@ -46,12 +46,6 @@ files:
     \            return 'error, wrong url without dot'\n\n\nsafari = Browser()\nwhile\
     \ True:\n    print(safari.show(input()))\n"
   learner_created: false
-- name: tb_tabs/nytimes
-  visible: true
-  learner_created: false
-- name: tb_tabs/bloomberg
-  visible: true
-  learner_created: false
 - name: tests.py
   visible: false
   text: |
@@ -156,6 +150,13 @@ files:
 
     TextBasedBrowserTest('browser.browser').run_tests()
   learner_created: false
+- name: browser/tmp/steamgifts_com
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/79/stages/440/implement
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations! Continue on <a href="https://hyperskill.org/projects/79/stages/440/implement">JetBrains
+    Academy</a>
+  time: Sun, 23 Aug 2020 21:30:41 UTC
 record: -1
